--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ build-QtQuickControls_helloworld-Desktop_Qt_5_6_1_MSVC2013_64bit2-Release/
 build-QtQuickControls_helloworld-Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/
 build-QtQuickControls_helloworld-Desktop_Qt_5_6_0_MinGW_32bit-Debug/
 build-QtQuickControls_helloworld-Desktop_Qt_5_5_1_MinGW_32bit-Debug/
+build-QtQuickControls_helloworld-Desktop_Qt_5_7_0_MinGW_32bit-Debug/
